# tburundigeo

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTOR_GUIDE.md  DEPLOYMENT_GUIDE.md  GITHUB_ACTIONS_SETUP.md  LICENSE  MANIFEST.in  PUBLISH_PYPI.md  PUBLISH_v1.0.2.md  README.md  READTHEDOCS_SETUP.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: api.rst  cli.rst  conf.py  contributing.rst  examples.rst  index.rst  installation.rst  quickstart.rst  requirements.txt
src/tburundigeo/: __init__.py
src/tburundigeo/api/: __init__.py  facade.py
src/tburundigeo/application/: __init__.py  export.py  hierarchy.py  loader.py  search.py  statistics.py  validation.py
src/tburundigeo/cli/: __init__.py  main.py
src/tburundigeo/common/: __init__.py  exceptions.py  types.py
src/tburundigeo/data/: __init__.py  communes.py  provinces.py  quartiers.py  zones.py
src/tburundigeo/domain/: __init__.py  entities.py  interfaces.py
src/tburundigeo/infrastructure/: __init__.py
src/tburundigeo/infrastructure/repositories/: __init__.py  memory.py  py_file.py
tests/: __init__.py  conftest.py  test_comprehensive.py
tests/api/: test_facade.py
tests/application/: test_hierarchy.py
tests/domain/: test_entities.py
tests/infrastructure/: test_memory_repositories.py
