[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tburundigeo"
version = "1.0.1"
description = "Package Python professionnel pour les données administratives du Burundi avec architecture hexagonale moderne"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
authors = [
    {name = "NIYOMWUNGERE Tresor", email = "tresor.getintouch@outlook.com", role = "author", maintainer = true}
]
maintainers = [
    {name = "NIYOMWUNGERE Tresor", email = "tresor.getintouch@outlook.com", role = "maintainer"}
]
keywords = [
    "burundi", "telona", "tburundigeo", "data", "geography", "hierarchy", 
    "provinces", "communes", "zones", "quartiers", "capitals", 
    "chief-towns", "africa", "gis", "administrative", "boundaries",
    "api", "cli", "python", "package", "library"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Documentation",
    "Topic :: Database",
    "Natural Language :: French",
    "Natural Language :: English",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS"
]
dependencies = []

[project.optional-dependencies]
pandas = ["pandas>=1.3.0"]
yaml = ["PyYAML>=6.0"]
click = ["click>=8.0.0"]
all = ["tburundigeo[pandas,yaml,click]"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "flake8>=6.0.0",
    "bandit>=1.7.0",
    "safety>=2.3.0",
    "pre-commit>=3.5.0",
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=1.0.0",
    "sphinx-autodoc-typehints>=1.24.0",
    "sphinx-copybutton>=0.5.0",
    "tburundigeo[all]"
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=1.0.0",
    "sphinx-autodoc-typehints>=1.24.0",
    "sphinx-copybutton>=0.5.0"
]

[project.urls]
Homepage = "https://github.com/tresor2004/tburundigeo"
Documentation = "https://tburundigeo.readthedocs.io/"
Repository = "https://github.com/tresor2004/tburundigeo.git"
"Bug Tracker" = "https://github.com/tresor2004/tburundigeo/issues"
Changelog = "https://github.com/tresor2004/tburundigeo/blob/main/CHANGELOG.md"
"Security Policy" = "https://github.com/tresor2004/tburundigeo/security"

[project.scripts]
tburundigeo = "tburundigeo.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tburundigeo"]
include = [
    "src/tburundigeo/**/*",
]


[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["tburundigeo"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src/tburundigeo"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
